--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
             <version>[7.2.0, 7.2.99]</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
